--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
     "@asymmetrik/ngx-leaflet": "3.0.1",
+    "@bahmutov/cy-api": "^2.2.6",
     "@nebular/auth": "4.1.2",
     "@nebular/eva-icons": "4.1.2",
     "@nebular/security": "4.1.2",
@@ -51,6 +52,7 @@
     "angular2-chartjs": "0.4.1",
     "angular2-toaster": "^7.0.0",
     "bootstrap": "4.3.1",
+    "chai-things": "^0.2.0",
     "chart.js": "^2.9.3",
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
